--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ nav .nav-menu {
   font-weight: 500;
 }
 
-.blog-body img {
+.blog-body .post-img {
   margin-top: 20px;
   margin-bottom: 10px;
 }
