--- a/style.css
+++ b/style.css
@@ -16,13 +16,13 @@ li {
 
 /* custom utility classes */
 .container {
-  max-width: 1100px;
+  max-width: 1200px;
   padding: 20px;
   margin: 0 auto;
 }
 .flex {
   display: flex;
-  gap: 20px;
+  gap: 30px;
 }
 
 /* layouts */
@@ -76,8 +76,11 @@ img {
 
 /* input boxes */
 input {
-  padding: 15px 20px;
+  padding: 10px;
   border: 1px solid #000;
+}
+input:focus {
+  outline: none;
 }
 
 textarea {
@@ -117,6 +120,20 @@ nav .nav-menu {
   cursor: pointer;
 }
 
+nav.show-menu {
+  display: none;
+  transition: 0.5s ease;
+}
+nav.close-menu {
+  display: none;
+}
+.mobile-menu ul {
+  margin-bottom: 20px;
+}
+.mobile-menu .buttons {
+  gap: 15px;
+}
+
 /* main body */
 
 .blog-body h1 {
@@ -150,6 +167,82 @@ nav .nav-menu {
   margin-bottom: 20px;
 }
 
+.social-links,
+.trending-posts,
+.newsletter-container {
+  margin-bottom: 20px;
+}
+
+.social-links svg {
+  cursor: pointer;
+}
+
+.trending-posts h1,
+.social-links h1 {
+  margin-bottom: 10px;
+}
+.post-card {
+  display: flex;
+  gap: 10px;
+  border-bottom: 1px solid #000;
+  padding: 15px 0;
+}
+.post-card img {
+  width: 150px;
+  object-fit: contain;
+}
+.post-info {
+  display: flex;
+  flex-direction: column;
+  gap: 3px;
+}
+.post-card .post-info h5 {
+  font-size: 12px;
+}
+.post-card .post-info .author {
+  font-size: 0.8rem;
+  color: #ff00d6;
+}
+.post-card .post-info .date {
+  font-size: 10px;
+  font-weight: 300;
+}
+
+.newsletter-container {
+  box-shadow: 7px 5px 4px rgba(0, 0, 0, 0.25);
+  background: #f7f7f7;
+}
+.newsletter-container h2 {
+  font-size: 1.3rem;
+}
+.newsletter-container h5 {
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.newsletter-container input {
+  width: 100%;
+  height: 30px;
+  font-size: 0.8rem;
+  font-weight: 400;
+  margin-bottom: 10px;
+}
+.newsletter-container button {
+  width: 100%;
+}
+
+.courses {
+  background: #f7f7f7;
+  border: 1px solid #000;
+}
+
+.course-info {
+  padding: 10px;
+}
+.course-info h1,
+.course-info p {
+  margin-bottom: 10px;
+}
+
 .react-section {
   margin-top: 50px;
 }
@@ -180,6 +273,20 @@ nav .nav-menu {
   font-size: 1.2rem;
 }
 
+.mobile-nav {
+  display: none;
+}
+.mobile-nav .toggle {
+  cursor: pointer;
+}
+.mobile-nav .toggle i {
+  font-size: 25px;
+  transition: ease;
+}
+.mobile-menu .show-menu {
+  display: flex;
+}
+
 /* responsive media queries */
 
 @media (max-width: 768px) {
@@ -189,5 +296,11 @@ nav .nav-menu {
   .main-body .blog-body,
   .main-body .sidebar {
     width: 100%;
+  }
+  .main-menu {
+    display: none;
+  }
+  .mobile-nav {
+    display: flex;
   }
 }
