--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ textarea {
   font-weight: 300;
   font-size: 1rem;
   border: 1px solid rgb(200, 200, 200);
-  background: #f4f4f4;
+  background: #fff;
 }
 
 /* newsletter */
