--- a/src/style.css
+++ b/src/style.css
@@ -423,12 +423,15 @@ footer {
 .mission-section {
   margin-bottom: 80px;
 }
-.mission-section h1 {
+.mission-section .heading {
+  margin-bottom: 50px;
+}
+.mission-section .heading h1 {
   color: #3c4852;
   font-size: 2.5rem;
   max-width: 600px;
 }
-.mission-section h5 {
+.mission-section .heading h5 {
   color: #52be81;
   margin-bottom: 20px;
 }
@@ -594,6 +597,13 @@ footer {
   }
   .mission-section .stats .stats-grid,
   .mission-section .stats img {
+    width: 100%;
+  }
+  .mission-section .heading {
+    text-align: center;
+  }
+  .mission-section .heading h1 {
+    font-size: 1rem;
     width: 100%;
   }
 }
