--- a/src/style.css
+++ b/src/style.css
@@ -329,7 +329,6 @@ footer {
   gap: 50px;
   justify-content: center;
   align-items: center;
-  padding: 40px;
   margin-bottom: 80px;
 }
 .about-section .about-heading {
@@ -356,9 +355,9 @@ footer {
     brightness(96%) contrast(110%);
 }
 .why-section .icon {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: flex !important;
+  justify-content: center !important;
+  align-items: center !important;
   height: 70px;
   width: 70px;
   padding: 18px;
