--- a/src/style.css
+++ b/src/style.css
@@ -605,6 +605,9 @@ footer {
     font-size: 1rem;
     width: 100%;
   }
+  .stat h2 {
+    font-size: 2rem;
+  }
 }
 
 @media (max-width: 550px) {
@@ -634,5 +637,27 @@ footer {
   }
   .about-section img {
     width: 60%;
+  }
+
+  .why-section h1 {
+    font-size: 1.8rem;
+  }
+  .why-section .item {
+    gap: 10px;
+  }
+  .stats-grid {
+    gap: 15px;
+  }
+  .stat {
+    padding: 10px;
+  }
+  .stat h2 {
+    font-size: 1.3rem;
+  }
+  .stat h5 {
+    font-size: 10px;
+  }
+  .program-section h1 {
+    font-size: 1.5rem;
   }
 }
