--- a/src/style.css
+++ b/src/style.css
@@ -573,13 +573,16 @@ footer {
 }
 
 .skills-tags .tag {
-  font-size: 0.7rem;
+  font-size: 14px;
+  line-height: 24px;
+  opacity: 0.8;
   font-weight: 500;
   text-align: center;
   background: #706dd7;
   color: #fff;
-  padding: 5px 8px;
-  border-radius: 100px;
+  padding: 0px 10px;
+  border-radius: 12px;
+  margin-left: 5px;
   margin-top: 5px;
   display: flex;
   align-items: center;
