--- a/src/style.css
+++ b/src/style.css
@@ -71,6 +71,7 @@ button {
 img {
   width: 100%;
 }
+
 .profile-img {
   height: 50px;
   width: 50px;
@@ -108,7 +109,7 @@ textarea {
 /* navbar */
 
 .logo img {
-  height: 50px;
+  width: 120px !important;
   image-rendering: -moz-crisp-edges; /* Firefox */
   image-rendering: -o-crisp-edges; /* Opera */
   image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming) */
@@ -323,7 +324,9 @@ footer {
 }
 
 /* ABOUT PAGE */
-
+.nav-bar-desktop {
+  margin-bottom: 80px;
+}
 .about-section {
   display: flex;
   gap: 50px;
