--- a/main/navbarfooter.css
+++ b/main/navbarfooter.css
@@ -284,6 +284,7 @@
   padding: 18px;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
   border: 1px solid black;
+  z-index: 100;
 }
 
 .pricing-dropdown-desk {
@@ -333,6 +334,7 @@
   padding: 18px;
   box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.2);
   border: 2px solid black;
+  z-index: 100;
 }
 
 .catalog-desk:hover,
