--- a/src/style.css
+++ b/src/style.css
@@ -322,7 +322,10 @@ footer {
   background: #f7f7f7;
   border-top: 1px solid rgba(0, 0, 0, 0.311);
 }
-
+/* 
+*/
+/* 
+*/
 /* ABOUT PAGE */
 .nav-bar-desktop {
   margin-bottom: 80px;
@@ -382,6 +385,11 @@ footer {
 }
 .why-section .icon-4 {
   background: #1580f7;
+}
+.why-section-container {
+  background: #f1f1f1;
+  padding: 30px 0;
+  margin-bottom: 40px;
 }
 .why-section {
   display: flex;
@@ -549,6 +557,10 @@ footer {
   gap: 20px;
 }
 
+.skillset-desktop h1 {
+  margin-bottom: 10px;
+}
+
 .skill-content {
   color: #575757;
   font-size: 18px;
@@ -647,6 +659,24 @@ footer {
   color: #fff;
   padding: 5px 8px;
   border-radius: 100px;
+}
+
+.skills-desktop .skills-img img {
+  width: 450px;
+  image-rendering: crisp-edges;
+  image-rendering: -moz-crisp-edges; /* Firefox */
+  image-rendering: -o-crisp-edges; /* Opera */
+  image-rendering: -webkit-optimize-contrast; /* Webkit (non-standard naming)*/
+  -ms-interpolation-mode: nearest-neighbor; /* IE (non-standard property) */
+  display: none;
+}
+.skills-desktop .skills-img img.active {
+  display: flex;
+}
+.skills-desktop .skills-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 /* responsive media queries */
